# DynamicProgramWithChatGPT

./: .gitignore  README.md  main.py  pyproject.toml
codebot/: __init__.py  codebot.py  utils.py
